--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.15.3"
+rand = "0.8"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
 
 [features]
